// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with 1 expense 1`] = `
<div>
  <p>
    You have 
    <b>
      0
    </b>
     
    expenses
     and their total is: 
    <b>
      $0.00
    </b>
  </p>
</div>
`;

exports[`should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <p>
    You have 
    <b>
      1
    </b>
     
    expense
     and their total is: 
    <b>
      $670.00
    </b>
  </p>
</div>
`;
